--- a/bundles/persistence/pom.xml
+++ b/bundles/persistence/pom.xml
@@ -24,6 +24,7 @@
     <module>org.openhab.persistence.rrd4j</module>
     <module>org.openhab.persistence.exec</module>
     <module>org.openhab.persistence.exec.test</module>
+    <module>org.openhab.persistence.http</module>
     <module>org.openhab.persistence.mysql</module>
     <module>org.openhab.persistence.cosm</module>
     <module>org.openhab.persistence.gcal</module>
