Added default configuration

--- a/distribution/openhabhome/configurations/openhab_default.cfg
+++ b/distribution/openhabhome/configurations/openhab_default.cfg
@@ -395,6 +395,13 @@ logging:pattern=%date{ISO8601} - %-25logger: %msg%n
 # '> if (PresenceSimulation.state == ON) sendCommand(%s,%s)')
 #gcal-persistence:executescript=
 
+############################ HTTP Persistence Service #################################
+# Url to call. For format syntax see https://docs.oracle.com/javase/7/docs/api/java/util/Formatter.html#syntax
+#httppersistence:pattern=http://url/api?item=%1$s&state=%2$s&date=%3$s
+
+# Cast every state to numeric
+i#httppersistence:forcenumeric=false
+
 ################################# MQTT Persistence #########################################
 #
 # Name of the broker as defined in the section MQTT Transport
